2004-12-01  Neale Ferguson <Neale.Ferguson@SoftwareAG-usa.com>

	* icall.c (mono_ArgIterator_Setup) : Conditionally compile calculation of
	iter->args based on whether parameters are passed in registers (i.e.
	MONO_ARCH_REGPARMS is defined)

2004-12-01  Zoltan Varga  <vargaz@freemail.hu>

	* loader.c (mono_lookup_pinvoke_call): Use the remapped dll name in
	the exception message. Fixes #70070.
	(method_from_methodspec): Fix warnings.

2004-12-01 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* process.c: (complete_path) return the path quoted

2004-12-01  Martin Baulig  <martin@ximian.com>

	* class-internals.h (MonoGenericInst): New structure.
	(MonoGenericClass): Replaced `type_argc', `type_argv' and
	`is_open' with `MonoGenericInst *inst'.
	(MonoGenericMethod): Replaced `mtype_argc', `mtype_argv' and
	`is_open' with `MonoGenericInst *inst'.

2004-11-30  Martin Baulig  <martin@ximian.com>

	Generics API cleanup: renamed MonoGenericInst -> MonoGenericClass.

	* metadata-internals.h (MonoImage): Renamed `generic_inst_cache'
	to `generic_class_cache'.

	* metadata.c
	(mono_generic_inst_hash): Renamed to mono_generic_class_hash().
	(mono_generic_inst_equal): Renamed to mono_generic_class_equal().
	(mono_generic_inst_is_valuetype): Renamed to
	mono_generic_class_is_valuetype().

	* class-internals.h
	(MonoGenericInst): Renamed to MonoGenericClass.
	(MonoDynamicGenericInst): Renamed to MonoDynamicGenericClass.
	(MonoClass): Renamed `generic_inst' to `generic_class'.
	(MonoGenericContext): Renamed `ginst' to `gclass'.

	* object-internals.h
	(MonoReflectionGenericInst): Renamed to MonoReflectionGenericClass.

	* reflection.c (mono_reflection_generic_inst_initialize): Renamed to
	mono_reflection_generic_class_initialize().

	* icall.c (icall_entries): "System.Reflection.MonoGenericInst" is
	now known as "System.Reflection.MonoGenericClass".
	(monogenericinst_icalls): Renamed to monogenericclass_icalls.

2004-11-29  Sebastien Pouliot  <sebastien@ximian.com>
